--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -7,6 +7,7 @@
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
+        <span style="color:red;font-size:10px;">NAV: {{ page.nav }}</span>
         {% unless logo_path == empty %}
           <a class="site-logo" href="{{ '/' | relative_url }}"><img src="{{ logo_path | relative_url }}" alt="{{ site.masthead_title | default: site.title }}"></a>
         {% endunless %}
